other/b-d/block-ephemeral-containers/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-ephemeral-containers
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../block-ephemeral-containers.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: pod.yaml
    - apply:
        file: podcontrollers.yaml
  - name: step-03
    try:
    - script:
        content: if kubectl debug -it pod01 --image=busybox:1.35 --target=busybox
          -n block-ephemeral-ns; then exit 1; else exit 0; fi;
    - script:
        content: if kubectl debug -it pod02 --image=busybox:1.35 --target=busybox02
          -n block-ephemeral-ns; then exit 1; else exit 0; fi;
    - script:
        content: if kubectl debug -it pod03 --image=busybox:1.35 --target=busybox
          -n block-ephemeral-ns; then exit 1; else exit 0; fi;
    - script:
        content: if kubectl debug -it $(kubectl get po -n block-ephemeral-ns | grep
          deployment01 | awk '{print $1}') --image=busybox:1.35 --target=bb -n block-ephemeral-ns;
          then exit 1; else exit 0; fi;
  - name: step-98
    try:
    - command:
        args:
        - delete
        - deployments
        - --all
        - --force
        - --grace-period=0
        - -n
        - block-ephemeral-ns
        entrypoint: kubectl
    - command:
        args:
        - delete
        - pods
        - --all
        - --force
        - --grace-period=0
        - -n
        - block-ephemeral-ns
        entrypoint: kubectl
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: block-ephemeral-containers
